# PacMan

./: CMakeLists.txt  PacBoard.cpp  PacBoard.h  PacGameMenager.cpp  PacGameMenager.h  PacGhosts.cpp  PacGhosts.h  PacMan.cpp  PacMan.h  PacSFMLEvent.cpp  PacSFMLEvent.h  PacSFMLGraphic.cpp  PacSFMLGraphic.h  PacSFMLMusic.cpp  PacSFMLMusic.h  PacView.cpp  PacView.h  Plansza do pacmana.xlsx  Readme Pacman.txt  main.cpp  plansza.txt
